# packet_scrutiny

./: CMakeLists.txt  README.md  rules.json
.cache/clangd/index/: AppFingerprinter.cpp.996903D80106646B.idx  AppFingerprinter.hpp.D21EEE3072CA7927.idx  FlowOrchestrator.cpp.45C7036C076A5B10.idx  FlowOrchestrator.hpp.9EC978012F5055FE.idx  FrameDissector.cpp.F048A9F1A8D65F4B.idx  FrameDissector.hpp.9A7C4983A366607A.idx  InspectionPipeline.cpp.62C1B57451CC2638.idx  InspectionPipeline.hpp.155A101F1C51B85B.idx  PcapIngester.cpp.CFF2004290934897.idx  PcapIngester.hpp.D8372CCF521DA47F.idx  PolicyEngine.cpp.D6A603D492BE50CE.idx  PolicyEngine.hpp.1663E14BDBE00CB5.idx  Protocol.cpp.30E0346F3D96B99A.idx  Protocol.hpp.BFDB50DD0E47F195.idx  SessionLedger.cpp.0E9D4C89D75B80CF.idx  SessionLedger.hpp.795961640300315A.idx  Stopwatch.cpp.84F16816EEB766FB.idx  Stopwatch.hpp.A489B8F9C4CECA16.idx  TlsProber.cpp.03027D02F9EE6299.idx  TlsProber.hpp.6C1731BDD13D1B69.idx  Types.cpp.DBCE631FF482408A.idx  Types.hpp.6B2BE9BB516A991A.idx  main.cpp.6CDB5D68B7B67A18.idx
include/sentinel/analysis/: AppFingerprinter.hpp  TlsProber.hpp
include/sentinel/benchmark/: Stopwatch.hpp
include/sentinel/capture/: FrameDissector.hpp  PcapIngester.hpp
include/sentinel/core/: Protocol.hpp  Types.hpp
src/: main.cpp
src/analysis/: AppFingerprinter.cpp  TlsProber.cpp
src/benchmark/: Stopwatch.cpp
src/capture/: FrameDissector.cpp  PcapIngester.cpp
src/core/: Protocol.cpp  Types.cpp
src/engine/: InspectionPipeline.cpp
src/flow/: FlowOrchestrator.cpp  SessionLedger.cpp
src/rules/: PolicyEngine.cpp
(+4 files in other folders)
